Bug 172430 - SVN build broken in abstractaudiodataoutput.cpp
Summary: SVN build broken in abstractaudiodataoutput.cpp
Status: RESOLVED FIXED
Alias: None
Product: Phonon
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Matthias Kretz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-10-09 04:12 UTC by Daniel Richard G.
Modified: 2008-11-29 12:36 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Daniel Richard G. 2008-10-09 04:12:13 UTC
Version:            (using Devel)
Compiler:          gcc version 4.1.2 20061115 (prerelease) (Debian 4.1.1-21) 
OS:                Linux
Installed from:    Compiled sources

kdesupport build fails with

[ 94%] Building CXX object phonon/phonon/experimental/CMakeFiles/phononexperimental.dir/abstractaudiodataoutput.cpp.o
/opt/kde4/include/QtCore/qhash.h: In member function 'typename QHash<Key, T>::Node** QHash<Key, T>::findNode(const Key&, uint*) const [with Key = Phonon::Experimental::AudioFormat, T = QHashDummyValue]':
/opt/kde4/include/QtCore/qhash.h:741:   instantiated from 'typename QHash<Key, T>::iterator QHash<Key, T>::insert(const Key&, const T&) [with Key = Phonon::Experimental::AudioFormat, T = QHashDummyValue]'
/opt/kde4/include/QtCore/qset.h:176:   instantiated from 'QSet<T>::const_iterator QSet<T>::insert(const T&) [with T = Phonon::Experimental::AudioFormat]'
/opt/kde4/include/QtCore/qset.h:197:   instantiated from 'QSet<T>& QSet<T>::operator<<(const T&) [with T = Phonon::Experimental::AudioFormat]'
/scratch/kdesvn/kdesupport/phonon/phonon/experimental/abstractaudiodataoutput.cpp:39:   instantiated from here
/opt/kde4/include/QtCore/qhash.h:860: error: call of overloaded 'qHash(const Phonon::Experimental::AudioFormat&)' is ambiguous
/scratch/kdesvn/kdesupport/phonon/phonon/experimental/audioformat.h:91: note: candidates are: uint qHash(const Phonon::Experimental::AudioFormat&)
/scratch/kdesvn/kdesupport/phonon/phonon/experimental/audioformat.h:83: note:                 uint Phonon::Experimental::qHash(const Phonon::Experimental::AudioFormat&)
make[2]: *** [phonon/phonon/experimental/CMakeFiles/phononexperimental.dir/abstractaudiodataoutput.cpp.o] Error 1
make[1]: *** [phonon/phonon/experimental/CMakeFiles/phononexperimental.dir/all] Error 2
make: *** [all] Error 2

Started seeing this a couple days ago.
Comment 1 Raul Fernandes 2008-11-29 01:20:55 UTC
I have exactly the same problem here and another error. SVN version from today.

[ 67%] Building CXX object phonon/phonon/experimental/CMakeFiles/phononexperimental.dir/abstractaudiodataoutput.cpp.o
/opt/qt-4.4.3/include/QtCore/qhash.h: In member function ‘typename QHash<Key, T>::Node** QHash<Key, T>::findNode(const Key&, uint*) const [with Key = Phonon::Experimental::AudioFormat, T = QHashDummyValue]’:
/opt/qt-4.4.3/include/QtCore/qhash.h:735:   instantiated from ‘typename QHash<Key, T>::iterator QHash<Key, T>::insert(const Key&, const T&) [with Key = Phonon::Experimental::AudioFormat, T = QHashDummyValue]’
/opt/qt-4.4.3/include/QtCore/qset.h:170:   instantiated from ‘QSet<T>::const_iterator QSet<T>::insert(const T&) [with T = Phonon::Experimental::AudioFormat]’
/opt/qt-4.4.3/include/QtCore/qset.h:191:   instantiated from ‘QSet<T>& QSet<T>::operator<<(const T&) [with T = Phonon::Experimental::AudioFormat]’
/var/tmp/kde-build/4.1.80/kdesupport/phonon/phonon/experimental/abstractaudiodataoutput.cpp:39:   instantiated from here
/opt/qt-4.4.3/include/QtCore/qhash.h:854: error: call of overloaded ‘qHash(const Phonon::Experimental::AudioFormat&)’ is ambiguous
/var/tmp/kde-build/4.1.80/kdesupport/phonon/phonon/experimental/audioformat.h:91: note: candidates are: uint qHash(const Phonon::Experimental::AudioFormat&)
/var/tmp/kde-build/4.1.80/kdesupport/phonon/phonon/experimental/audioformat.h:83: note:                 uint Phonon::Experimental::qHash(const Phonon::Experimental::AudioFormat&)
make[2]: ** [phonon/phonon/experimental/CMakeFiles/phononexperimental.dir/abstractaudiodataoutput.cpp.o] Erro 1
Comment 2 Raul Fernandes 2008-11-29 01:24:45 UTC
SVN revision 890342.
The other compilation error is in strigi.
Comment 3 Matthias Kretz 2008-11-29 12:36:30 UTC
SVN commit 890442 by mkretz:

change the #ifdef to the same as in effectparameter.h

BUG: 172430


 M  +6 -5      audioformat.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=890442