change the #ifdef to the same as in effectparameter.h

BUG: 172430